<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screen.wallpaper_details.WallpaperDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDetailsImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_forward_arrow" />

        <!-- VIEWS -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/views"
            android:textColor="#AAAAAA"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetailsImage"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViewsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="1234"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetailsImage"
            app:layout_constraintStart_toEndOf="@id/tvViews" />

        <!-- DOWNLOADS -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/downloads"
            android:textColor="#AAAAAA"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvViews"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDownloadsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="5678"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvViewsNumber"
            app:layout_constraintStart_toEndOf="@id/tvDownloads" />

        <!-- LIKES -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/likes"
            android:textColor="#AAAAAA"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvDownloads"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="9001"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvDownloadsNumber"
            app:layout_constraintStart_toEndOf="@id/tvLikes" />

        <!-- COMMENTS -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/comments"
            android:textColor="#AAAAAA"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvLikes"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCommentsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="420"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvLikesNumber"
            app:layout_constraintStart_toEndOf="@id/tvComments" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Loading Spinner -->
    <ProgressBar
        android:id="@+id/progressBarDetails"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:background="@drawable/circle_background"
        android:indeterminateTint="#FFFFFF" />
</FrameLayout>